absoluut ipv relatief

--- a/404.html
+++ b/404.html
@@ -28,7 +28,7 @@
     <meta name="theme-color" content="#161616">
     
     <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="css/fonts.css">
+    <link rel="stylesheet" href="/css/fonts.css">
 </head>
 <body>
 <div id="content">
