⭳ symbool werkt niet op android :(

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <div id="loader" class="cascadiamono loading" hidden></div>
     <img id="output" hidden>
-    <button id="download" class="futura" onclick="dl();">⭳ download</button>
+    <button id="download" class="futura" onclick="dl();">download</button>
     <a id="downloadAnchor" hidden></a>
 
     <p id="kleine-tekst" class="futura">
